<resources>
    <string name="app_name">HornsApp</string>

    <!-- Words -->
    <string name="version">Versión</string>
    <string name="upcoming_category">Próximos</string>
    <string name="metal_category">Metal</string>
    <string name="rock_category">Rock</string>
    <string name="total_category">Todos</string>
    <string name="app_name_register">HornsApp®</string>
    <string name="get_started">Empecemos</string>
    
    <!-- Settings -->
    <string name="settings_environment">Environment</string>
    <string name="settings_force_crash_title">Force Crash</string>
    <string name="settings_force_crash_subtitle">Press this button in order to crash the app.</string>
    <string name="settings_force_crash_button">Crash</string>

    <!-- Messages -->
    <string name="go_now">Ir Ahora</string>
    <string name="add_to_favorite">Se añadió a tus favoritos</string>
    <string name="about_concert">Acerca del concierto</string>
    <string name="go_to_maps">Ir a Google Map</string>
    <string name="fan_page">Página oficial</string>
    <string name="go_to_event">Ir a Facebook</string>
    <string name="official_video">Video oficial</string>
    <string name="go_to_youtube">Ir a Youtube</string>
    <string name="add_to_calendar">"Añadir al Calendario"</string>
    <string name="available_in">Disponible en</string>
    <string name="try_again">Volver a intentar</string>
    <string name="share_with_friends">Compartir con amigos</string>
    <string name="share_hornsapp_message">Buscando nuevos conciertos en Lima, descarga HornsApp (Rock &amp; Metal): https://play.google.com/store/apps/details?id=com.yesferal.hornsapp</string>
    <string name="use_your_favorite_apps">Usa tu app preferida</string>
    <string name="about_this_app">Acerca de</string>
    <string name="are_you_ready_for_tonight">Estas listo para hoy?</string>
    <string name="let_find_out_together">Vamos a encontrar juntos tu próximo concierto.</string>

    <!-- Error Messages -->
    <string name="error_default">Ha ocurrido un error, revisa tu conexión a internet y vuelve a intentarlo.</string>
    <string name="error_no_items">Por ahora no tenemos elementos para esta categoría.</string>
    <string name="error_app_not_found">No tienes la aplicación instalada.</string>
    <string name="error_no_favorite_yet">Aun no haz seleccionado ningun concierto como favorito.</string>

    <!-- Packages -->
    <string name="facebook_package">com.facebook.katana</string>
    <string name="maps_package">com.google.android.apps.maps</string>
    <string name="calendar_action_type">vnd.android.cursor.item/event</string>
</resources>
