<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <ImageView
        android:id="@+id/errorImageView"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_hornsapp"
        android:layout_margin="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/secondaryText" />

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/error_default"
        android:layout_margin="24dp"
        app:layout_constraintTop_toBottomOf="@id/errorImageView"/>

    <TextView
        android:id="@+id/tryAgainTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        android:textColor="@android:color/white"
        android:background="@drawable/shape_rectangle_rounded_16dp"
        android:backgroundTint="@color/accent"
        android:padding="16dp"
        android:layout_margin="24dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/errorTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tryAgainTextView"/>

</androidx.constraintlayout.widget.ConstraintLayout>