<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_big">

    <TextView
        android:id="@+id/environmentTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/environment"
        style="@style/HornsApp.TextView.Subtitle"
        android:textAlignment="viewStart"
        android:layout_marginEnd="@dimen/margin_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/environmentSpinner"/>

    <TextView
        android:id="@+id/environmentSubTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        app:layout_constraintTop_toBottomOf="@+id/environmentTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/environmentSpinner"/>

    <Spinner
        android:id="@+id/environmentSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:padding="@dimen/margin_small"
        app:layout_constraintTop_toTopOf="@+id/environmentTitleTextView"
        app:layout_constraintEnd_toStartOf="@+id/arrowImageView"
        app:layout_constraintBottom_toBottomOf="@+id/environmentTitleTextView"/>

    <ImageView
        android:id="@+id/arrowImageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:rotation="-90"
        android:src="@drawable/ic_back"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:padding="@dimen/margin_small"
        app:layout_constraintTop_toTopOf="@+id/environmentSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/environmentSpinner"/>

    <View
        android:id="@+id/forceCrashDividerView"
        android:layout_width="match_parent"
        android:layout_height="0.05dp"
        android:layout_marginVertical="@dimen/margin_big"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@+id/environmentSubTitleTextView" />

    <TextView
        android:id="@+id/forceCrashTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/settings_force_crash_title"
        style="@style/HornsApp.TextView.Subtitle"
        android:textAlignment="viewStart"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_marginEnd="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@+id/forceCrashDividerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/forceCrashTextView"/>

    <TextView
        android:id="@+id/forceCrashSubtitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:text="@string/settings_force_crash_subtitle"
        android:layout_marginEnd="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@+id/forceCrashTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/forceCrashTextView"/>

    <TextView
        android:id="@+id/forceCrashTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_force_crash_button"
        style="@style/HornsApp.Button"
        app:layout_constraintTop_toTopOf="@+id/forceCrashTitleTextView"
        app:layout_constraintBottom_toBottomOf="@+id/forceCrashSubtitleTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>